--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -19,7 +19,7 @@
     </p>
 
     <h2>What do you look like?</h2>
-    看起來像中正的研究生QQ
+   
 
   </body>
 </html>
